option java_package = "org.apache.hadoop.ipc.protobuf";
option java_outer_classname = "IpcConnectionContextProtos";
option java_generate_equals_and_hash = true;
package hadoop.common;

message UserInformationProto {
  optional string effectiveUser = 1;
  optional string realUser = 2;
}

message IpcConnectionContextProto {
  optional UserInformationProto userInfo = 2;
  optional string protocol = 3;
}
