option java_package = "org.apache.hadoop.ipc.protobuf";
option java_outer_classname = "ProtobufRpcEngineProtos";
option java_generate_equals_and_hash = true;
package hadoop.common;

message RequestHeaderProto {
  required string methodName = 1;
  required string declaringClassProtocolName = 2;
  required uint64 clientProtocolVersion = 3;
}
